# Data-Mining-Clustering

./: README.md  main.py  pyproject.toml  testing.ipynb
ClusteringAlgorithms/: __init__.py  clustering_module.py
DataLoader/: __init__.py  data_loader.py
Evaluation/: __init__.py  evaluation_module.py
Experiments/: __init__.py  experiment_runner.py  parameter_sensitivity.py  runtime_complexity.py
Visualization/: __init__.py  visualization_module.py
data/: README.md
docs/: final_report.md
results/: README.md  clarans_parameter_sensitivity.csv  evaluation_results.csv  rock_parameter_sensitivity.csv  runtime_complexity.csv
