[project]
name = "data-mining-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
